Clean up fuzzy wuzzy algorithm code